# chatbot_arena_api

./: .gitignore  README.md  pyproject.toml
src/: azure_factory.py  config.py  main.py  models.py  response_generator.py
